[metadata]
name = pepgrave
version = 0.1.0
url = https://github.com/isidentical/pepgrave
author = isidentical
description = Resurrecting Dead PEPs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
